--- a/css/style.css
+++ b/css/style.css
@@ -17,17 +17,26 @@ border-radius: 5px;
   margin-left: 0.01em;
   margin-right: 0.01em;
   padding: 0.2em;
-  background-color: gray;
+  background-color:whitesmoke;
   border-radius: 5px;
 }   
 .search{
   border-radius: 5px;
-  background:#37474F;
+  background:whitesmoke;
   width: 100%;
+  border: none;
 }
 .text{
   color: greenyellow;
   padding-top: 1em;
   text-align: center;
-  
+}
+.btnColor{
+  color : orange !important;
+  background-color: #111111;
+  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+}
+.btnColor:hover{
+  background-color: #535251;
 }
